--- a/css/style.css
+++ b/css/style.css
@@ -1527,25 +1527,65 @@ img {
 }
 
 .filter-input-checkbox:hover + label::before,
-.filter-input-checkbox:focus + label::before {
-  opacity: 1;
-}
-
+.filter-input-checkbox:focus + label::before,
 .filter-input-checkbox:hover:checked + label::before,
 .filter-input-checkbox:focus:checked + label::before {
   opacity: 1;
 }
 
-.filter-input-checkbox:disabled + label::before {
-  opacity: 0.3;
-}
-
+.filter-input-checkbox:disabled + label::before,
 .filter-input-checkbox:disabled:checked + label::before {
   opacity: 0.3;
 }
 
 .filter-legend-power {
-  margin-bottom: 21px;
+  margin-bottom: 25px;
+}
+
+.filter-input-radio + label::before {
+  content: "";
+  position: absolute;
+  left: -35px;
+  top: -3px;
+  width: 25px;
+  height: 25px;
+  border: 4px solid var(--basic-grey);
+  border-radius: 50%;
+  box-sizing: border-box;
+}
+
+.filter-input-radio:checked + label::after {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: -27px;
+  width: 9px;
+  height: 9px;
+  background-color: var(--basic-grey);
+  border-radius: 50%;
+}
+
+.filter-input-radio:hover + label::before,
+.filter-input-radio:focus + label::before,
+.filter-input-radio:hover:checked + label::before,
+.filter-input-radio:focus:checked + label::before {
+  border: 4px solid var(--basic-dark-grey);
+}
+
+.filter-input-radio:hover:checked + label::after,
+.filter-input-radio:focus:checked + label::after {
+  background-color: var(--basic-dark-grey);
+}
+
+.filter-input-radio:disabled + label::before,
+.filter-input-radio:disabled:checked + label::before {
+  border: 4px solid var(--basic-dark-grey);
+  opacity: 0.3;
+}
+
+.filter-input-radio:disabled:checked + label::after {
+  background-color: var(--basic-dark-grey);
+  opacity: 0.3;
 }
 
 .filter-input:focus + label::before {
