--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v7.0.29,
-* Autoprefixer: v9.7.6
-* Browsers: last 4 version
-*/
-
 /* Variables */
 
 :root {
@@ -235,11 +228,11 @@ img {
   opacity: 1;
 }
 
-.search-form-input:focus + .search-form-icon-path,
-.search-form-input:-webkit-autofill + .search-form-icon-path,
-.search-form-input:-webkit-autofill:hover + .search-form-icon-path,
-.search-form-input:-webkit-autofill:focus + .search-form-icon-path,
-.search-form-input:-webkit-autofill:active + .search-form-icon-path {
+.search-form-input:focus + .search-form-icon .search-form-icon-path,
+.search-form-input:-webkit-autofill + .search-form-icon .search-form-icon-path,
+.search-form-input:-webkit-autofill:hover + .search-form-icon .search-form-icon-path,
+.search-form-input:-webkit-autofill:focus + .search-form-icon .search-form-icon-path,
+.search-form-input:-webkit-autofill:active + .search-form-icon .search-form-icon-path {
   fill: var(--basic-red);
 }
 
